<resources>
    <string name="app_name">platespace</string>

    <string name="facebook_app_id">FACEBOOK_APP_ID</string>

    <string name="font_bold" translatable="false">fonts/Roboto-Bold.ttf</string>
    <string name="font_regular" translatable="false">fonts/Roboto-Regular.ttf</string>
    <string name="font_medium" translatable="false">fonts/Roboto-Medium.ttf</string>
    <string name="font_light" translatable="false">fonts/Roboto-Light.ttf</string>
    <string name="font_comfortaa_light" translatable="false">fonts/Comfortaa-Light.ttf</string>

    <!-- Sign in Activity -->
    <string name="email">Email</string>
    <string name="email_hint">EMAIL</string>
    <string name="skip">skip</string>
    <string name="password">Password</string>
    <string name="password_hint">PASSWORD</string>
    <string name="sign_in">sign in</string>
    <string name="log_in">log in</string>
    <string name="log_out">Log out</string>
    <string name="log_out_message">Are you sure you want to log out from platespace?</string>
    <string name="i_have_an_account_already">I have an Account already</string>
    <string name="ok">OK</string>
    <string name="or">or</string>
    <string name="connect_with_facebook">connect with Facebook</string>
    <string name="create_new_account">create new account</string>

    <string name="map">Map</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="apply">Apply</string>

    <string name="distance_miles">%1$s Miles</string>

    <plurals name="ratings_number">
        <item quantity="one">1 Rating</item>
        <item quantity="other">%d Ratings</item>
    </plurals>


    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="phone">Phone</string>
    <string name="rate_now">Rate Now</string>
    <string name="reviews">Reviews</string>

    <string name="add_review">Add Review</string>
    <string name="edit_review">Edit Review</string>
    <string name="add">Add</string>

    <string name="init_rating">0.0</string>
    <string name="unknown">N.A</string>
    <string name="title_activity_map">Map</string>
    <string name="loading">Loading &#8230;</string>

    <string name="location_permission_dialog_title">Permission Needed</string>
    <string name="location_permission_settings">Permissions</string>
    <string name="location_permission_dialog_msg">In order for the application to work, the location permission must be granted.</string>
    <string name="location_enabled_dialog_title">Location Needed</string>
    <string name="location_enabled_dialog_msg">In order for the application to work, the device location must be enabled.</string>

    <string name="sign_in_dialog_msg">In order to rate the restaurant you must be signed in</string>
    <string name="open_now">Open Now</string>
    <string name="closed_now">Closed Now</string>
    <string name="no_results">No Results</string>
    <string name="unable_to_get_results">Unable to get results. Please check your internet connection and try again later.</string>

    <string name="location_error">Unable to get device location. Please try again later.</string>
    <string name="review_error">Unable to add rating/review. Please try again later.</string>
    <string name="min_rating">Please select 1&#8211;5 stars</string>

    <string name="rating_disabled_dialog_title">Attention</string>
    <string name="rating_disabled_dialog_msg">In order to test the feature in your App, you must first login</string>

    <string-array name="filter_attributes">
        <item>All Categories</item>
        <item>Vegan Friendly</item>
        <item>Open On Weekends</item>
        <item>Free Parking</item>
        <item>Has Wifi</item>
    </string-array>

</resources>
