<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/rest_placeholder"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shadow"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:padding="@dimen/big_screen_padding">

            <LinearLayout android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:orientation="vertical">

                <TextView
                    android:id="@+id/restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/restaurant_name_text_size"
                    app:fontPath="@string/font_medium"
                    tools:text="Blue Hill"
                    android:shadowColor="@color/black_text"
                    android:shadowDy="1"
                    android:shadowDx="1"
                    android:shadowRadius="3"/>

                <TextView
                    android:id="@+id/opening_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/restaurant_opening_times_text_size"
                    tools:text="Open Now"
                    android:shadowColor="@color/black_text"
                    android:shadowDy="1"
                    android:shadowDx="1"
                    android:shadowRadius="3"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/map"
                android:layout_width="17dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_map"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/big_screen_padding"
        android:paddingLeft="@dimen/big_screen_padding"
        android:paddingRight="@dimen/big_screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/big_screen_padding"
            android:paddingTop="@dimen/big_screen_padding">

            <TextView
                android:id="@+id/average_rating_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/review_star_margin"
                android:background="@drawable/review_bg"
                android:textColor="@color/white"
                android:textSize="@dimen/review_text_size"
                app:fontPath="@string/font_bold"
                android:text="@string/init_rating"/>

            <com.iarcuschin.simpleratingbar.SimpleRatingBar
                android:id="@+id/average_rating_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/rate_small_star_separation"
                app:srb_drawBorderEnabled="false"
                app:srb_fillColor="@color/rate_star_fill"
                app:srb_isIndicator="true"
                app:srb_numberOfStars="5"
                app:srb_starBackgroundColor="@color/rate_star_empty"
                app:srb_starSize="@dimen/rate_small_star_size"
                app:srb_starsSeparation="@dimen/rate_small_star_separation"
                app:srb_stepSize="0.1"/>

            <TextView
                android:id="@+id/rating_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/review_text_size"
                app:fontPath="@string/font_medium"
                tools:text="160 reviews"/>
        </LinearLayout>

        <include layout="@layout/div" />

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/review_details_margin"/>

        <TextView
            style="@style/RestaurantGrayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"/>

        <TextView
            android:id="@+id/address"
            style="@style/RestaurantBlackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            tools:text="75 Washington Pl, New York, NY 10011, USA"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/review_details_margin"/>

        <TextView
            style="@style/RestaurantGrayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"/>

        <TextView
            android:id="@+id/website"
            style="@style/RestaurantBlackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:autoLink="web"
            android:lines="1"
            android:ellipsize="end"
            tools:text="www.bluehill.com"/>

        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/review_details_margin"/>

        <TextView
            style="@style/RestaurantGrayTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"/>

        <TextView
            android:id="@+id/phone"
            style="@style/RestaurantBlackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            android:autoLink="phone"
            tools:text="212-539-1776"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rate_now_background"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/rate_now_padding">

        <TextView
            style="@style/RestaurantBlackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_now"/>


        <com.iarcuschin.simpleratingbar.SimpleRatingBar
            android:id="@+id/rate_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rate_now_padding"
            android:padding="8dp"
            app:srb_drawBorderEnabled="false"
            app:srb_fillColor="@color/rate_star_fill"
            app:srb_numberOfStars="5"
            app:srb_starBackgroundColor="@color/rate_star_empty"
            app:srb_starSize="@dimen/rate_big_star_size"
            app:srb_starsSeparation="@dimen/rate_big_star_separation"
            app:srb_stepSize="1.0"/>

    </LinearLayout>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/review_details_margin"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/big_screen_padding"
        android:paddingRight="@dimen/big_screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/list_item_review_padding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:text="@string/reviews"
                android:textColor="@color/black_text"
                android:textSize="@dimen/review_header_text_size"
                app:fontPath="@string/font_medium"/>


            <ImageButton
                android:id="@+id/add_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingBottom="@dimen/review_header_padding_top_bottom"
                android:paddingLeft="@dimen/review_header_padding_top_bottom"
                android:paddingRight="@dimen/list_item_review_padding"
                android:paddingTop="@dimen/review_header_padding_top_bottom"
                android:src="@drawable/ic_add"/>

        </LinearLayout>

        <include layout="@layout/div" />

    </FrameLayout>
</LinearLayout>